--- a/code/src/patterns_tabs/OlympiadsTab.fxml
+++ b/code/src/patterns_tabs/OlympiadsTab.fxml
@@ -1,48 +1,33 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.*?>
+<?import java.lang.*?>
 <?import javafx.scene.control.*?>
 <?import javafx.scene.layout.*?>
+<?import javafx.scene.control.TableView?>
+<?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.ColumnConstraints?>
+<?import javafx.scene.layout.GridPane?>
+<?import javafx.scene.layout.Pane?>
+<?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/8"
+<AnchorPane prefHeight="334.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1"
             fx:controller="controllers_tabs.OlympiadsTabController">
     <children>
-        <GridPane fx:id="mainGridPane" layoutX="179.0" layoutY="135.0" prefHeight="400.0" prefWidth="600.0"
+        <GridPane fx:id="mainGridPane" layoutX="179.0" layoutY="135.0" prefHeight="333.0" prefWidth="600.0"
                   AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0"
                   AnchorPane.topAnchor="0.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="355.0" minHeight="10.0" prefHeight="270.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="196.0" minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="196.0" minHeight="10.0" prefHeight="75.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="355.0" minHeight="10.0" prefHeight="269.0" vgrow="SOMETIMES"/>
+                <RowConstraints maxHeight="196.0" minHeight="10.0" prefHeight="65.0" vgrow="SOMETIMES"/>
             </rowConstraints>
             <children>
-                <TableView fx:id="fieldsTable" editable="true" prefHeight="200.0" prefWidth="200.0"/>
-                <FlowPane alignment="CENTER" columnHalignment="CENTER" prefHeight="200.0" prefWidth="200.0"
-                          GridPane.rowIndex="1">
-                    <children>
-                        <Button fx:id="addOlympiadsButton" alignment="CENTER" contentDisplay="CENTER" maxWidth="600.0"
-                                minWidth="200.0" mnemonicParsing="false" onAction="#openModalWindow" prefWidth="350.0"
-                                style="-fx-background-color: #BDBDBD; -fx-background-radius: 20px; -fx-cursor: hand;"
-                                text="Добавить основание на 100 баллов"/>
-                    </children>
-                </FlowPane>
-                <GridPane GridPane.rowIndex="2">
-                    <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                        <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0"/>
-                    </columnConstraints>
-                    <rowConstraints>
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES"/>
-                    </rowConstraints>
-                    <children>
-                        <FlowPane fx:id="buttonsPane" prefHeight="200.0" prefWidth="200.0" GridPane.columnIndex="1"/>
-                    </children>
-                </GridPane>
-                <FlowPane prefHeight="200.0" prefWidth="200.0"/>
+                <Pane fx:id="buttonsPane" prefHeight="67.0" prefWidth="600.0" GridPane.rowIndex="1"/>
+                <TableView fx:id="fieldsTable" editable="true" prefHeight="319.0" prefWidth="600.0"/>
             </children>
         </GridPane>
     </children>
 </AnchorPane>
+
