--- a/code/src/patterns_tabs/EntranceExamTab.fxml
+++ b/code/src/patterns_tabs/EntranceExamTab.fxml
@@ -14,9 +14,9 @@
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="355.0" minHeight="10.0" prefHeight="270.0" vgrow="SOMETIMES" />
-            <RowConstraints maxHeight="196.0" minHeight="10.0" prefHeight="80.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="196.0" minHeight="10.0" prefHeight="75.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="220.0" vgrow="SOMETIMES" />
+            <RowConstraints minHeight="10.0" prefHeight="75.0" vgrow="SOMETIMES" />
+          <RowConstraints minHeight="10.0" prefHeight="75.0" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Pane fx:id="buttonsPane" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" />
