--- a/code/src/application/MainWindow.fxml
+++ b/code/src/application/MainWindow.fxml
@@ -7,7 +7,6 @@
 <?import javafx.scene.control.SeparatorMenuItem?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
-<?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.BorderPane?>
@@ -18,17 +17,18 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="856.0" prefWidth="1520.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainWindowController">
+<AnchorPane prefHeight="856.0" prefWidth="1520.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainWindowController">
    <children>
-      <BorderPane fx:id="menuPane" layoutX="-1.0" prefHeight="43.0" prefWidth="754.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+      <BorderPane layoutX="-1.0" prefHeight="43.0" prefWidth="754.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
             <MenuBar prefHeight="7.0" prefWidth="734.0" style="-fx-border-color: darkgray;" BorderPane.alignment="CENTER">
               <menus>
-                <Menu mnemonicParsing="false" text="Справочники">
+                <Menu fx:id="itemsCatalog" mnemonicParsing="false" onAction="#onActionCatalog" text="Справочники">
                      <items>
-                        <MenuItem mnemonicParsing="false" text="Вступительные испытания" />
-                        <MenuItem mnemonicParsing="false" text="Блоки испытаний" />
+                        <MenuItem mnemonicParsing="false" text="Категории допсведений" />
+                        <MenuItem mnemonicParsing="false" text="Формы вступительных испытаний" />
                         <MenuItem mnemonicParsing="false" text="Основания для оценки" />
+                        <MenuItem mnemonicParsing="false" text="Языки вступительных испытаний" />
                         <SeparatorMenuItem mnemonicParsing="false" />
                         <MenuItem mnemonicParsing="false" text="Типы паспортов" />
                         <MenuItem mnemonicParsing="false" text="Регионы" />
@@ -39,19 +39,17 @@
                         <SeparatorMenuItem mnemonicParsing="false" />
                         <MenuItem mnemonicParsing="false" text="Причины возврата" />
                         <SeparatorMenuItem mnemonicParsing="false" />
-                        <MenuItem mnemonicParsing="false" text="Индивидуальные" />
+                        <MenuItem mnemonicParsing="false" text="Олимпиады" />
                         <SeparatorMenuItem mnemonicParsing="false" />
-                        <MenuItem mnemonicParsing="false" text="Направления обучения" />
-                        <MenuItem mnemonicParsing="false" text="Формы обучения" />
+                        <MenuItem mnemonicParsing="false" text="Уровни образования" />
+                        <MenuItem mnemonicParsing="false" text="Типы образования" />
                         <MenuItem mnemonicParsing="false" text="Специальности" />
-                        <MenuItem mnemonicParsing="false" text="Кафедры" />
-                        <MenuItem mnemonicParsing="false" text="Конкурсные группы" />
+                        <MenuItem mnemonicParsing="false" text="Формы обучения" />
+                        <MenuItem mnemonicParsing="false" text="Конкурсные группы " />
                         <MenuItem mnemonicParsing="false" text="Целевые организации" />
-                        <MenuItem mnemonicParsing="false" text="Стандарты образования" />
-                        <SeparatorMenuItem mnemonicParsing="false" />
-                        <MenuItem mnemonicParsing="false" text="План приема" />
-                        <SeparatorMenuItem mnemonicParsing="false" />
-                        <MenuItem mnemonicParsing="false" text="Пользователи" />
+                        <MenuItem mnemonicParsing="false" text="Типы БВИ" />
+                        <MenuItem mnemonicParsing="false" text="Типы Квоты" />
+                        <MenuItem mnemonicParsing="false" text="Типы Преимущественного права" />
                      </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Документы">
