--- a/code/src/application/MainWindow.fxml
+++ b/code/src/application/MainWindow.fxml
@@ -1,5 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import java.lang.*?>
+<?import javafx.geometry.*?>
+<?import javafx.scene.control.*?>
+<?import javafx.scene.layout.*?>
+<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -17,7 +22,7 @@
 <?import javafx.scene.text.Font?>
 <?import javafx.scene.text.Text?>
 
-<AnchorPane prefHeight="856.0" prefWidth="1520.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainWindowController">
+<AnchorPane prefHeight="856.0" prefWidth="1520.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="application.MainWindowController">
    <children>
       <BorderPane layoutX="-1.0" prefHeight="43.0" prefWidth="754.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
          <top>
@@ -26,6 +31,8 @@
                 <Menu fx:id="itemsCatalog" mnemonicParsing="false" onAction="#onActionCatalog" text="Справочники">
                      <items>
                         <MenuItem mnemonicParsing="false" text="Категории допсведений" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" text="Перечень вступительных испытаний" />
                         <MenuItem mnemonicParsing="false" text="Формы вступительных испытаний" />
                         <MenuItem mnemonicParsing="false" text="Основания для оценки" />
                         <MenuItem mnemonicParsing="false" text="Языки вступительных испытаний" />
@@ -43,13 +50,21 @@
                         <SeparatorMenuItem mnemonicParsing="false" />
                         <MenuItem mnemonicParsing="false" text="Уровни образования" />
                         <MenuItem mnemonicParsing="false" text="Типы образования" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
                         <MenuItem mnemonicParsing="false" text="Специальности" />
                         <MenuItem mnemonicParsing="false" text="Формы обучения" />
                         <MenuItem mnemonicParsing="false" text="Конкурсные группы " />
                         <MenuItem mnemonicParsing="false" text="Целевые организации" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
                         <MenuItem mnemonicParsing="false" text="Типы БВИ" />
                         <MenuItem mnemonicParsing="false" text="Типы Квоты" />
                         <MenuItem mnemonicParsing="false" text="Типы Преимущественного права" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" text="Перечень индивидуальных достижений" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" text="Пользователи" />
+                        <SeparatorMenuItem mnemonicParsing="false" />
+                        <MenuItem mnemonicParsing="false" text="План приема" />
                      </items>
                 </Menu>
                 <Menu mnemonicParsing="false" text="Документы">
