--- a/code/src/patterns_tabs/CompetitiveGroupsTab.fxml
+++ b/code/src/patterns_tabs/CompetitiveGroupsTab.fxml
@@ -1,8 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -10,15 +7,15 @@
 <?import javafx.scene.layout.Pane?>
 <?import javafx.scene.layout.RowConstraints?>
 
-<AnchorPane prefHeight="334.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_tabs.CompetitiveGroupsTabController">
+<AnchorPane prefHeight="334.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_tabs.CompetitiveGroupsTabController">
    <children>
       <GridPane fx:id="mainGridPane" layoutX="179.0" layoutY="135.0" prefHeight="333.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
         <columnConstraints>
           <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
         </columnConstraints>
         <rowConstraints>
-          <RowConstraints maxHeight="355.0" minHeight="10.0" prefHeight="269.0" vgrow="SOMETIMES" />
-          <RowConstraints maxHeight="196.0" minHeight="10.0" prefHeight="65.0" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="355.0" minHeight="10.0" prefHeight="263" vgrow="SOMETIMES" />
+          <RowConstraints maxHeight="196.0" minHeight="10.0" prefHeight="72" vgrow="SOMETIMES" />
         </rowConstraints>
          <children>
             <Pane fx:id="buttonsPane" prefHeight="67.0" prefWidth="600.0" GridPane.rowIndex="1" />
