--- a/code/src/patterns_tabs/IndividualAchievementsTab.fxml
+++ b/code/src/patterns_tabs/IndividualAchievementsTab.fxml
@@ -1,28 +1,25 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.geometry.Insets?>
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
-<?import javafx.scene.layout.FlowPane?>
 <?import javafx.scene.layout.GridPane?>
 <?import javafx.scene.layout.RowConstraints?>
+<?import javafx.scene.layout.Pane?>
 
-<AnchorPane prefHeight="246.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_tabs.IndividualAchievementsTabController">
+<AnchorPane prefHeight="334.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" fx:controller="controllers_tabs.IndividualAchievementsTabController">
     <children>
-        <GridPane fx:id="mainGridPane" layoutX="179.0" layoutY="135.0" prefHeight="400.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
+        <GridPane fx:id="mainGridPane" layoutX="179.0" layoutY="135.0" prefHeight="333.0" prefWidth="600.0" AnchorPane.bottomAnchor="0.0" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0" AnchorPane.topAnchor="0.0">
             <columnConstraints>
                 <ColumnConstraints hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
             </columnConstraints>
             <rowConstraints>
-                <RowConstraints maxHeight="355.0" minHeight="10.0" prefHeight="214.66668701171875" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="196.0" minHeight="10.0" prefHeight="15.33331298828125" vgrow="SOMETIMES" />
-                <RowConstraints maxHeight="196.0" minHeight="10.0" prefHeight="75.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="355.0" minHeight="10.0" prefHeight="263.0" vgrow="SOMETIMES" />
+                <RowConstraints maxHeight="196.0" minHeight="10.0" prefHeight="72.0" vgrow="SOMETIMES" />
             </rowConstraints>
             <children>
-                <FlowPane fx:id="buttonsPane" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="2" />
-                <TableView fx:id="fieldsTable" editable="true" prefHeight="200.0" prefWidth="600.0" />
+                <Pane fx:id="buttonsPane" prefHeight="67.0" prefWidth="600.0" GridPane.rowIndex="1" />
+                <TableView fx:id="fieldsTable" editable="true" prefHeight="319.0" prefWidth="600.0" />
             </children>
         </GridPane>
     </children>
