--- a/code/src/application/MainWindow.fxml
+++ b/code/src/application/MainWindow.fxml
@@ -1,10 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import java.lang.*?>
-<?import javafx.geometry.*?>
-<?import javafx.scene.control.*?>
-<?import javafx.scene.layout.*?>
-<?import javafx.scene.text.*?>
 <?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Menu?>
 <?import javafx.scene.control.MenuBar?>
@@ -131,7 +126,7 @@
                 <RowConstraints maxHeight="153.0" minHeight="7.66668701171875" percentHeight="15.0" prefHeight="10.333343505859375" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
-                   <TableView fx:id="fieldsTable" prefHeight="299.0" prefWidth="320.0" style="-fx-border-color: darkgray;" />
+                   <TableView fx:id="fieldsTable" onMouseClicked="#getSelectedAbiturient" prefHeight="299.0" prefWidth="320.0" style="-fx-border-color: darkgray;" />
                   <FlowPane fx:id="buttonsPane" alignment="CENTER" prefHeight="200.0" prefWidth="200.0" GridPane.rowIndex="1" />
                </children>
                <opaqueInsets>
